Fix test out of memory