@@ -148,9 +148,8 @@
 <!--  								-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8989 -->
 <!--  								-Xnoagent -->
 
-								-Xmx2g
-								-Xms128m
-								-XX:MaxPermSize=850m
+								-Xmx2048m
+								-Xms1024m
 							</cargo.jvmargs>
 							
 						</properties>
